Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5
-
a933e28bd (dev), 50e3d2a10 (6.5)
Description
While testing some fixes, I needed to build the 6.5 branch from git. Running cmake on a project results in
QML module does not contain information about components contained in plugins. Module path: /home/prcs1076/Projekte/qt6-build/qtbase/qml/QtQml See "Using QML Modules with Plugins" in the documentation. Automatic type dump of QML module failed. Errors: "/home/prcs1076/Projekte/qt6-build/qtbase/bin/qmlplugindump" crashed. Arguments: -nonrelocatable QtQml 2.0 . qmlplugindump is deprecated. Please declare your types using QML_ELEMENT and related macros. Then utilize the build system to invoke qmltyperegistrar in order to generate qmltypes files.
, and the stacktrace is
#0 0x00007fe5d737b2b0 in objectClassName (m=0x0) at /home/prcs1076/Projekte/qt6/qtbase/src/corelib/kernel/qmetaobject.cpp:332 #1 0x00007fe5d737b2e8 in QMetaObject::className (this=0x0) at /home/prcs1076/Projekte/qt6/qtbase/src/corelib/kernel/qmetaobject.cpp:342 #2 0x00000000004091b7 in collectReachableMetaObjects (engine=0x7ffd5006e730, noncreatables=..., singletons=..., compositeTypes=..., info=..., skip=...) at /home/prcs1076/Projekte/qt6/qtdeclarative/tools/qmlplugindump/main.cpp:239 #3 0x000000000040e621 in main (argc=5, argv=0x7ffd5006f408) at /home/prcs1076/Projekte/qt6/qtdeclarative/tools/qmlplugindump/main.cpp:1298
for the first time.
Maybe this is just WIP or dev build specific and can be ignored. On the other hand, there seems to be some leftover (as it claims it's deprecated).
The problem goes away after the first cmake run.
Attachments
For Gerrit Dashboard: QTBUG-109562 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
451697,2 | qmlplugindump: Don't crash on value types with extensions | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
451970,2 | qmlplugindump: Don't crash on value types with extensions | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |